# microquake-spp

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  Brewfile  Dockerfile  Dockerfile.baseimage  Pipfile  README.md  docker-compose-kafka-monitoring.yml  docker-compose-timescale.yml  docker-compose.yml  docker-entrypoint.sh  event_histogram.py  init_container.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
airflow_dags/: data_connector_config.yaml
batch/: extract_event_catalog.py  extract_ppv.py  reprocess_range.py
batch/migration/: catalag_reconciliation.py  catalog_reconciliation.py  catalog_reconciliation_2.py  fix_magnitude_March_August_2019.py
common/: OT.xml  cables.csv  ingest_info.txt  keep_files_in_sync.py  make_velocity.py  sensor_types.csv  sensors.csv  sensors.xlsx  vp.pickle.REMOVED.git-id  vs.pickle.REMOVED.git-id
common/models/: EventClassifier.py  SignalNoiseClassifier.py
common/velocities/: README  make_velocity.py
config/: connectors.toml  data_connector_config.yaml  data_connector_config.yaml.example  ims_connector_config.yaml  ingest_config.json  ingest_config.yaml  input.xml  input_velocity.xml  mseed_avro_schema.avsc  permanent_db.yaml  picker.yaml  project.xml  settings.toml  settings.toml.example  settings.toml.example_mike  time.json  time.yaml  time_ex2.json
config/modules/: interloc.toml
data/: 20170419_153133.mseed.REMOVED.git-id  2018-04-15_034422.mseed.REMOVED.git-id  2018-04-15_034422.xml  event.mseed.REMOVED.git-id  event.xml  event4.xml.REMOVED.git-id  grafana-initdb.sql  mongo_schema.tar.bz2  nll_processed.xml.REMOVED.git-id  test.xml.REMOVED.git-id  timescale-initdb.sql
data/mth_test/: 20180706112101.mseed.REMOVED.git-id  20180706112101.xml  foo.py
data/tests/: test_end_to_end.xml  test_output_amplitude.xml  test_output_energy.xml  test_output_focal_mechanism.xml  test_output_magnitude.xml  test_output_nlloc.xml  test_output_picker.xml  test_output_smom.xml
data/weights/: .gitattributes  best_model.hdf5  model_3classes.hdf5  multiclass-mode.hdf5  multiclass-model.hdf5
data_extraction/: ingest_data_test.py
deprecated/: 01_decompose_mseed.py  05_magnitude_calculation.py  data_connector_mseed.py  init_spp.py  inject_kafka_msg.py  test_z_end_to_end.py  web_client.py
deprecated/airflow_dags/: data_connector_airflow_job.py
deprecated/post_processing/: liblog.py
docker/: Dockerfile
docker/prometheus/: prometheus.yml
helpers/: middleware.py
sandbox/JP/: event_location_test.py  hypocenter_location_test_consumer.py  hypocenter_location_test_producer.py  magnitude_test_consumer.py  mseed_decomposer_test.py  mseed_recomposer_test.py  read_ims_binary.py  test_data_connector.py  upload_data.py  upload_data_azure.py
sandbox/phil/: picker.py  run_data_transformer.sh  t0_inject_SPLITmseed.py  t1_listener.py  (+1 more)
scripts/: consuming_streams_into_kafka.py  consuming_streams_into_kafka_confluent.py  consuming_streams_into_kafka_confluent_fastavro_poc.py  consuming_streams_into_kafka_confluent_poc.py  consuming_streams_into_kafka_schema_fastavro_poc.py  ims_connector.py  ims_connector_parallel.py  ims_data_airflow_job.py  kafka_utils.py  nohup.out  picker.py  spp_archive_api.py  spp_archive_api.py.api  spp_archive_api.py.conflict  spp_archive_api.py.mth  spp_archive_api.py.old  test_consuming_kafka.py  test_web_client.py  z.dev
servers/: config_server.py  grid_servers.py
spp/: version.py
tests/: conftest.py  test_automatic_pipeline.py  test_classifier.py  test_end_to_end.py  test_focal_mechanism.py  test_interloc.py  test_magnitude.py  test_magnitude_f.py  test_measure_amplitudes.py  test_measure_energy.py  test_measure_smom.py  test_nlloc.py  test_picker.py  test_ray_tracing.py  test_settings.py  test_z_end_to_end.py
time/: core.py
tools/: argo-pipeline.yml  orientation.pickle  sensor_orientation.py
(+592 files in other folders)
