[sdist]
keep-temp = 1
dist-dir = "dist/source"

[tox]
minversion = "3.4.0"
requires = ["tox-venv", "setuptools >= 30.0.0"]

[tool.poetry]
name = "spp"
version = "0.1.0"
authors = ["Jean-Phillipe Mercier", "Reza Jelveh"]
license = "GPL-3.0"
description = "Python library for processing of seismic data"
keywords = ["seismology", "mining" ]
homepage = "https://api.microquake.org"
repository = "https://git.microquake.org"

packages = [
    { include = "spp", from ="./" },
]


[tool.poetry.dependencies]
python = "^3.6 || ^3.7"
matplotlib = "*"
obspy = "*"
pymongo = "*"
pyparsing = "*"
scikit-fmm = "*"
prometheus-client = "*"
avro = "*"
fastavro = "*"
pyyaml = "*"
toolz = "*"
pytz = "*"
msgpack = "*"
dynaconf = "*"
ipython = "*"
redis = "*"
tqdm = "*"
tenacity = "*"
apscheduler = "*"
scipy = "^1.2"
pathos = "^0.2.3"
numpy = "^1.16"
h5py = "^2.9"
pandas = "^0.24.2"
microquake-hashwrap = "^0.0.3"
pytest-parallel = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "*"
