[sdist]
keep-temp = 1
dist-dir = "dist/source"

[tox]
minversion = "3.4.0"
requires = ["tox-venv", "setuptools >= 41.0.0"]

[tool.poetry]
name = "spp"
version = "0.1.7"
authors = ["Jean-Phillipe Mercier", "Reza Jelveh"]
license = "GPL-3.0"
description = "Python library for processing of seismic data"
keywords = ["seismology", "mining" ]
homepage = "https://api.microquake.org"
repository = "https://git.microquake.org"

packages = [
    { include = "spp", from ="./" },
]

[[tool.poetry.source]]
name = "microquake"
url = "https://pkg.microquake.org/simple/"

[tool.poetry.scripts]
seismic_platform = 'spp.core.cli:cli'

[tool.poetry.dependencies]
python = "^3.6"
scikit-fmm = "^2019.1"
prometheus-client = "*"
pyyaml = "*"
toolz = "*"
msgpack = "*"
dynaconf = "*"
redis = "*"
tqdm = "*"
tenacity = "*"
apscheduler = "*"
scipy = "^1.2"
pathos = "^0.2.3"
obspy = "~1.1.1"
pytz = "^2019.1"
matplotlib = "^3.0"
numpy = "^1.16"
h5py = "^2.9"
pandas = "^0.24.2"
loguru = "^0.3.0"
click = "^7.0"
microquake-hashwrap = "^0.0.4"
confluent-kafka = "^1.0"
uplink = {version = "^0.9.0", extras = ["aiohttp", "marshmallow"]}
psycopg2 = "^2.8.3"
rq = "*"
librosa = "^0.7"
tensorflow = "^2.0"
fakeredis = "^1.0"
skidmarks = "^0.0.6"
cachier = "^1.2"
walrus = "^0.7.1"
xseis2 = "^0.1.8"
microquake = "^0.1.245"
timeloop = "^1.0.2"
mplstereonet = "^0.5.0"
ipdb = "^0.12.3"
ipython = "^7.11"
tensorboard = "^2.1"
# setuptools = "^1.0.0"

sqlalchemy_utils = "^0.36.1"
seismic_client = "^0.1.6"
[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "*"
ipython = "^7.5"
pytest-parallel = "^0.0.9"
